    the results of the spectrum -list command
May 27, 2005
  - Added support for a glob like pattern in the switch of the clear, pararmeter
    bind, apply, and pseudo commands.  When a pattern is given after -list, the 
    command returns objects whose name matches the pattern.
May 31, 2005
  - Remove extra copy construction in TreeParameter ThrowIf's.. as that's an 
    enormous performance hit.
June 1, 2005
  - Fix documentation errors in gate command wrt mask gates.

3.0-002
  - Fix defect with guintegrate - was multiply deleting contours during
    integration.
  - Did  a bunch of refactoring to make the integration loop code look nicer.
  - Treeparameter fixes: GUI should save empty units on unit-less variables and
    spectra.  In addition for old files, treevariable -set should have units optional
3.0-003
  - Remove requirement for fortran at config time.

3.0-004
  - Do a bit of recasting in order to make cleaner compiles on ia64 systems.
3.0-005
  - Fix errors in gamma spectrum increment.  When there are no valid parameters
    in an event, the outer loop of the 2d gamma spectrum increment will
    loop almost infinitely and eventually segfault.
3.0-006
   - Retry pipe data source select if it fails with eintr.
   - Fix defect 188 - Grobj files write out spectrum ids rather than 
     names.. The fix will read old files, but new files will use
     names.
   - Fix issue with reading old tcl-list files: the treeparameter command
     was invoked with the wrong number of parameters.
   - Fix error in saving .sdef files in old treeparameter gui.
   - Fix buffer overflow error in grprint.cc found by Dave Caussyn.
   - Remove illegal default argument in PointlistGate.h

SpecTcl-3.0-007
   - Credit D. Bazin as original author of TreeParam in the sources.
   - Fix configuration not always finding motif headers on current systems.
   - Fix 64-bit uncleanliness in Xamine

SpecTcl-3.0-008
   - Added wysiwyg printing based on image capture from the frames.