@@ -357,3 +357,6 @@ SpecTcl-3.0-007
 
 SpecTcl-3.0-008
    - Added wysiwyg printing based on image capture from the frames.
+   - Fix defects 195, 196: Gri was emitting epsf which printers would
+     smoosh all on one page. Print setup dialog's print command had
+     a duplicate widget name that made it operate strangely.
